--- a/buildspec-ci.yml
+++ b/buildspec-ci.yml
@@ -3,7 +3,7 @@ version: 0.2
 env:
   variables:
     IMAGE_REPO_NAME: myapp
-    AWS_DEFAULT_REGION: ap-south-1
+    AWS_DEFAULT_REGION: us-east-1
 
 phases:
   pre_build:
