--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,23 +1,32 @@
 version: 0.2
 
+env:
+  variables:
+    IMAGE_REPO_NAME: myapp
+    AWS_DEFAULT_REGION: us-east-1
+
 phases:
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR...
+      - echo Logging in to ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - IMAGE_TAG=$CODEBUILD_BUILD_NUMBER
 
   build:
     commands:
-      - echo Build Docker image...
-      - docker build -t myapp:$IMAGE_TAG .
-      - docker tag myapp:$IMAGE_TAG $ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/myapp:$IMAGE_TAG
+      - echo Building Docker image...
+      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
 
   post_build:
     commands:
-      - echo Push Docker image...
-      - docker push $ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/myapp:$IMAGE_TAG
-      - echo "IMAGE_URI=$ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/myapp:$IMAGE_TAG" > imageDetail.txt
+      - echo Pushing Docker image...
+      - docker push $ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - echo IMAGE_URI=$ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG > imageDetail.txt
+      # Deploy step for CD
+      - echo Deploying to Kubernetes...
+      - kubectl apply -f k8s/deployment.yaml
+      - kubectl rollout status deployment/myapp -n $Namespace
 
 artifacts:
   files:
