--- a/.github/workflows/aws-codebuild.yml
+++ b/.github/workflows/aws-codebuild.yml
@@ -4,43 +4,32 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout repo
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2: List repo files for debugging (optional)
       - name: List files
         run: ls -R
 
-      # Step 3: Setup Node.js (adjust version if needed)
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      # Step 4: Install dependencies (update working-directory if needed)
       - name: Install dependencies
-        working-directory: kube-docker  # <- folder containing package.json
-        run: npm install
+        run: npm install  # <- no working-directory if package.json is at root
 
-      # Step 5: Configure AWS credentials
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1  # change to your region
+          aws-region: us-east-1
 
-      # Step 6: Trigger CodeBuild project
       - name: Start AWS CodeBuild
-        run: |
-          aws codebuild start-build --project-name your-codebuild-project-name
+        run: aws codebuild start-build --project-name your-codebuild-project-name
