--- a/.github/workflows/aws-codebuild.yml
+++ b/.github/workflows/aws-codebuild.yml
@@ -1,58 +1,17 @@
-name: Kube-Docker CI/CD
+name: Hello Actions
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  test:
+    runs-on: ubuntu-latest  # GitHub-hosted runner
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: List repo files
-        run: ls -R
-
-      - name: Detect package.json folder
-        id: find_package
-        run: |
-          FILE=$(find . -name package.json | head -n 1 || true)
-          if [ -z "$FILE" ]; then
-            echo "package.json not found. Skipping Node steps."
-            echo "found=false" >> $GITHUB_OUTPUT
-            echo "dir=." >> $GITHUB_OUTPUT
-          else
-            DIR=$(dirname "$FILE")
-            echo "package.json found at $FILE"
-            echo "found=true" >> $GITHUB_OUTPUT
-            echo "dir=$DIR" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Setup Node.js
-        if: steps.find_package.outputs.found == 'true'
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Install dependencies
-        if: steps.find_package.outputs.found == 'true'
-        run: npm install
-        working-directory: ${{ steps.find_package.outputs.dir }}
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-      - name: Start AWS CodeBuild
-        run: aws codebuild start-build --project-name my-codebuild-project-check
+      - name: Say Hello
+        run: echo "Hello from GitHub Actions!"
