--- a/.github/workflows/aws-codebuild.yml
+++ b/.github/workflows/aws-codebuild.yml
@@ -1,47 +1,25 @@
-name: Kube-Docker CI/CD
+name: Feature Branch CI
 
 on:
   push:
     branches:
-      - main
+      - feature/*   # Trigger on feature branches
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on:
+      - codebuild-myProject-${{ github.run_id }}-${{ github.run_attempt }}
+        image: aws/codebuild/standard:5.0
+        instance-size:small
+        buildspec-override:true
 
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Detect package.json folder
-        id: find_package
+      - name: Build project
         run: |
-          FILE=$(find . -name package.json | head -n 1)
-          if [ -z "$FILE" ]; then
-            echo "package.json not found! Exiting..."
-            exit 1
-          fi
-          DIR=$(dirname "$FILE")
-          echo "dir=$DIR" >> $GITHUB_OUTPUT
+          echo "Running build on CodeBuild-hosted runner"
+          npm install
+          npm test
 
-      - name: Install dependencies
-        run: npm install
-        working-directory: ${{ steps.find_package.outputs.dir }}
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-
-      - name: Test AWS CLI
-        run: aws sts get-caller-identity
-
-      - name: Start AWS CodeBuild
-        run: aws codebuild start-build --project-name kube-docker-build
