--- a/.github/workflows/runners-verify.yml
+++ b/.github/workflows/runners-verify.yml
@@ -1,23 +1,33 @@
-name: runners-verify
+name: runners-verify-v2
 
 on:
   push:
     branches:
       - feature/*
+  workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: codebuild-gha-project-verify-${{ github.run_id }}-${{ github.run_attempt }};image=aws/codebuild/standard:5.0;instance-size=small;buildspec-override=true
+  feature-build:
+    # Use your CodeBuild runner project name here
+    runs-on: codebuild-gha-runner-v2-${{ github.run_id }}-${{ github.run_attempt }};image=aws/codebuild/standard:5.0;instance-size=small;buildspec-override=true
 
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install dependencies
+      # Step 2: Install dependencies
+      - name: Install Node.js dependencies
         run: npm install
 
+      # Step 3: Run tests
       - name: Run tests
         run: npm test
 
+      # Step 4: Build project
       - name: Build project
         run: npm run build
+
+      # Step 5: Completion message
+      - name: Finish
+        run: echo "Feature branch build completed successfully on CodeBuild runner!"
