--- a/.github/workflows/runners-main.yml
+++ b/.github/workflows/runners-main.yml
@@ -1,14 +1,14 @@
-name: runners-verify
+name: runners-main
 
 on:
   push:
     branches:
-      - feature/*   # Trigger on feature branches
+      - main   # Only trigger on main branch
   workflow_dispatch: # Optional manual trigger
 
 jobs:
   build:
-    runs-on: codebuild-kube-docker-gha-runner-${{ github.run_id }}-${{ github.run_attempt }};image=aws/codebuild/standard:6.0;instance-size=small;buildspec-override=true
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
@@ -24,4 +24,4 @@ jobs:
         run: npm run build
 
       - name: Finish
-        run: echo "Feature branch build completed successfully on CodeBuild runner!"
+        run: echo "Main branch build completed successfully!"
